feat: - link soft delete and update endpoints - profile avatar & password update endpoints
