# src/controllers/link.controller.js
@@ -6,10 +6,15 @@ import geoip from "geoip-lite";
 import { UAParser } from "ua-parser-js";
 import Click from "../models/click.model.js";
 import { nanoid } from "nanoid";
+import { formatSlug } from "../utils/link.js";
 const createLink = async (req, res) => {
   try {
     const { slug, destination, ogTitle, ogDescription } = req.body;
-
+    const linkExists = await Link.findOne({ slug });
+    if (linkExists) {
+      fs.unlinkSync(req.file.path);
+      return sendError(res, "Slug already exists", 400);
+    }
     let ogImage = null;
     if (req.file) {
       const result = await cloudinary.uploader.upload(req.file.path, {
@@ -21,16 +26,11 @@ const createLink = async (req, res) => {
           gravity: "auto",
         },
       });
-      console.log("result", result);
       ogImage = result.secure_url;
       fs.unlinkSync(req.file.path);
     }
-    const linkExists = await Link.findOne({ slug });
-    if (linkExists) {
-      return sendError(res, "Slug already exists", 400);
-    }
     const link = await Link.create({
-      slug,
+      slug: formatSlug(slug),
       destination,
       og: {
         title: ogTitle,
@@ -41,6 +41,70 @@ const createLink = async (req, res) => {
     });
 
     return sendSuccess(res, link, "Link created successfully", 201);
+  } catch (error) {
+    return sendError(res, error.message, 500);
+  }
+};
+
+const updateLink = async (req, res) => {
+  try {
+    const { slug } = req.params;
+    const link = await Link.findOne({ slug, isDeleted: { $ne: true } });
+    const { slug: newSlug, destination, ogTitle, ogDescription } = req.body;
+    if (!link) {
+      fs.unlinkSync(req.file.path);
+      return sendError(res, "Link not found", 404);
+    }
+    let ogImage = null;
+    if (req.file) {
+      const result = await cloudinary.uploader.upload(req.file.path, {
+        folder: "b8lnk/og-preview",
+        transformation: {
+          width: 1200,
+          height: 630,
+          crop: "fill",
+          gravity: "auto",
+        },
+      });
+      ogImage = result.secure_url;
+      fs.unlinkSync(req.file.path);
+    }
+    const updatedLink = await Link.findByIdAndUpdate(
+      link._id,
+      {
+        slug: formatSlug(newSlug),
+        destination,
+        og: {
+          title: ogTitle,
+          description: ogDescription,
+          image: ogImage,
+        },
+      },
+      { new: true },
+    );
+    return sendSuccess(res, updatedLink, "Link updated successfully", 200);
+  } catch (error) {
+    return sendError(res, error.message, 500);
+  }
+};
+
+const deleteLink = async (req, res) => {
+  try {
+    const { slug } = req.params;
+    const link = await Link.findOne({ slug, isDeleted: { $ne: true } });
+
+    if (!link) {
+      return sendError(res, "Link not found", 404);
+    }
+
+    if (link.createdBy.toString() !== req.user._id.toString()) {
+      return sendError(res, "Unauthorized", 401);
+    }
+    await Link.findByIdAndUpdate(link._id, {
+      isDeleted: true,
+      deletedAt: Date.now(),
+    });
+    return sendSuccess(res, null, "Link deleted successfully", 200);
   } catch (error) {
     return sendError(res, error.message, 500);
   }
@@ -67,13 +131,12 @@ const getUserLinks = async (req, res) => {
 const redirectLink = async (req, res) => {
   try {
     const { slug } = req.params;
-    const link = await Link.findOne({ slug });
+    const link = await Link.findOne({ slug, isDeleted: false });
     if (!link) {
       return sendError(res, "Link not found", 404);
     }
     const ip =
       req.headers["x-forwarded-for"]?.split(",")[0] || req.socket.remoteAddress;
-    console.log(ip);
 
     const geo = geoip.lookup(ip);
     const parser = new UAParser(req.headers["user-agent"]);
@@ -103,7 +166,7 @@ const redirectLink = async (req, res) => {
 const checkSlug = async (req, res) => {
   try {
     const { slug } = req.params;
-    const link = await Link.findOne({ slug });
+    const link = await Link.findOne({ slug, isDeleted: false });
     if (link) {
       const suggestions = [];
       const candidates = Array.from(
@@ -129,7 +192,7 @@ const checkSlug = async (req, res) => {
 const userlinksStats = async (req, res) => {
   try {
     const stats = await Link.aggregate([
-      { $match: { createdBy: req.user.id } },
+      { $match: { createdBy: req.user.id, isDeleted: false } },
       {
         $group: {
           _id: null,
@@ -163,4 +226,6 @@ export {
   redirectLink,
   userlinksStats,
   checkSlug,
+  updateLink,
+  deleteLink,
 };
