# src/models/link.model.js
@@ -5,10 +5,8 @@ const linkSchema = new Schema(
     slug: {
       type: String,
       required: true,
-      unique: true,
       trim: true,
       lowercase: true,
-      index: true,
     },
     destination: { type: String, required: true },
     clicks: { type: Number, default: 0 },
@@ -21,9 +19,14 @@ const linkSchema = new Schema(
     createdBy: { type: Schema.Types.ObjectId, ref: "User", default: null },
     isActive: { type: Boolean, default: true },
     expiresAt: { type: Date, default: null },
+    isDeleted: { type: Boolean, default: false },
+    deletedAt: { type: Date, default: null },
   },
   { timestamps: true },
 );
-
+linkSchema.index(
+  { slug: 1 },
+  { unique: true, partialFilterExpression: { isDeleted: false } },
+);
 const Link = model("Link", linkSchema);
 export default Link;
