# src/routes/profile.route.js
@@ -4,6 +4,8 @@ import {
   updateProfile,
   requestDeleteProfile,
   confirmDeleteProfile,
+  updatePassword,
+  updateAvatar,
 } from "../controllers/profile.controller.js";
 import { authMiddleware } from "../middlewares/auth.middleware.js";
 import upload from "../middlewares/multer.middleware.js";
@@ -11,6 +13,8 @@ import upload from "../middlewares/multer.middleware.js";
 const router = Router();
 router.get("/", authMiddleware, getProfile);
 router.patch("/", authMiddleware, upload.single("avatar"), updateProfile);
+router.patch("/password", authMiddleware, updatePassword);
+router.patch("/avatar", authMiddleware, upload.single("avatar"), updateAvatar);
 router.delete("/", authMiddleware, requestDeleteProfile);
 router.delete("/confirm-delete", confirmDeleteProfile);
 
